--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^18.1.0",
     "@ng-icons/bootstrap-icons": "^29.3.0",
     "@ng-icons/core": "^29.3.0",
+    "animate.css": "^4.1.1",
     "rxjs": "~7.8.0",
     "socket.io-client": "^4.7.5",
     "tslib": "^2.3.0",
